--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="css/compiled.min.css">
 
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
@@ -74,6 +76,7 @@
 	<p class="text-xs-center">"Tu Salud es Importante para Nosotros"</p>
 </div>
 <div id="productos" class="container">
+	<h3 class="text-xs-center">----------------------Mas Servicios------------------------</h3>
 <div class="card-group">
     <div class="card">
         <img class="img-fluid" src="http://mdbootstrap.com/images/reg/reg%20(63).jpg" alt="Card image cap">
@@ -100,7 +103,109 @@
         </div>
     </div>
 </div>
-   </div>  
+   </div>  	
+<!--Section: Products v.4-->
+<section class="section container">
+
+    <!--Section heading-->
+    <h1 class="section-heading">Productos Destacados</h1>
+    <!--Section sescription-->
+    <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam. Quia, minima?</p>
+
+    <!--First row-->
+    <div class="row">
+
+        <!--First column-->
+        <div class="col-lg-3 col-md-6 m-b-r">
+
+            <!--Collection card-->
+            <div class="card collection-card z-depth-1-half">
+                <!--Card image-->
+                <div class="view  hm-zoom">
+                    <img src="http://mdbootstrap.com/images/ecommerce/vertical/lq/img%20(1).jpg" class="img-fluid" alt="">
+                    <div class="stripe dark">
+                        <a>
+                            <p>Tops <i class="fa fa-chevron-right"></i></p>
+                        </a>
+                    </div>
+                </div>
+                <!--/.Card image-->
+            </div>
+            <!--/.Collection card-->
+
+        </div>
+        <!--/First column-->
+
+        <!--Second column-->
+        <div class="col-lg-3 col-md-6 m-b-r">
+
+            <!--Collection card-->
+            <div class="card collection-card z-depth-1-half">
+                <!--Card image-->
+                <div class="view  hm-zoom">
+                    <img src="http://mdbootstrap.com/images/ecommerce/vertical/lq/img%20(3).jpg" class="img-fluid" alt="">
+                    <div class="stripe light">
+                        <a>
+                            <p>Shorts <i class="fa fa-chevron-right"></i></p>
+                        </a>
+                    </div>
+                </div>
+                <!--/.Card image-->
+            </div>
+            <!--/.Collection card-->
+
+        </div>
+        <!--/Second column-->
+
+        <!--Third column-->
+        <div class="col-lg-3 col-md-6 m-b-r">
+
+            <!--Collection card-->
+            <div class="card collection-card z-depth-1-half">
+                <!--Card image-->
+                <div class="view  hm-zoom">
+                    <img src="http://mdbootstrap.com/images/ecommerce/vertical/img%20(10).jpg" class="img-fluid" alt="">
+                    <div class="stripe dark">
+                        <a>
+                            <p>Dresses <i class="fa fa-chevron-right"></i></p>
+                        </a>
+                    </div>
+                </div>
+                <!--/.Card image-->
+            </div>
+            <!--/.Collection card-->
+
+        </div>
+        <!--/Third column-->
+
+        <!--Fourth column-->
+        <div class="col-lg-3 col-md-6 m-b-r">
+
+            <!--Collection card-->
+            <div class="card collection-card z-depth-1-half">
+                <!--Card image-->
+                <div class="view  hm-zoom">
+                    <img src="http://mdbootstrap.com/images/ecommerce/vertical/img%20(12).jpg" class="img-fluid" alt="">
+                    <div class="stripe light">
+                        <a>
+                            <p>Accessories <i class="fa fa-chevron-right"></i></p>
+                        </a>
+                    </div>
+                </div>
+                <!--/.Card image-->
+            </div>
+            <!--/.Collection card-->
+
+        </div>
+        <!--/Fourth column-->
+
+    </div>
+    <!--/First row-->
+
+</section>
+<!--/Section: Products v.4-->
+
+</div>
 
     <!-- /Start your project here-->
 
