--- a/index.html
+++ b/index.html
@@ -24,13 +24,60 @@
 </head>
 
 <body>
+    
+<!--Navbar-->
+<nav class="navbar navbar-dark bg-primary">
+
+    <!-- Collapse button-->
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx2">
+        <i class="fa fa-bars"></i>
+    </button>
+
+    <div class="container">
+
+        <!--Collapse content-->
+        <div class="collapse navbar-toggleable-xs" id="collapseEx2">
+            <!--Navbar Brand-->
+            <a class="navbar-brand">DC.Farmacia</a>
+            <!--Links-->
+            <ul class="nav navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Promociones</a>
+                </li>
+                <li class="nav-item btn-group">
+                    <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Consultas</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <a class="dropdown-item">Action</a>
+                        <a class="dropdown-item">Another action</a>
+                        <a class="dropdown-item">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+            <!--Search form-->
+            <form class="form-inline">
+                <input class="form-control" type="text" placeholder="Search">
+            </form>
+        </div>
+        <!--/.Collapse content-->
+
+    </div>
+
+</nav>
+<!--/.Navbar-->
+
 
 
     <!-- Start your project here-->
 
     <div style="height: 100vh">
         <div class="flex-center">
-            <h1 class="animated fadeIn afd">Material Design for Bootstrap</h1>
+            <h1 class="animated fadeIn ">Material Design for Bootstrap</h1>
         </div>
     </div>
 
