--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <li class="nav-item btn-group">
                     <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <a class="dropdown-item">Action</a>
-                        <a class="dropdown-item">Another action</a>
-                        <a class="dropdown-item">Something else here</a>
+                        <a class="dropdown-item">Doctora</a>
+                        <a class="dropdown-item">Dentista</a>
+                        <a class="dropdown-item">Enfermera</a>
                     </div>
                 </li>
             </ul>
