--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         <!--Collapse content-->
         <div class="collapse navbar-toggleable-xs" id="collapseEx2">
             <!--Navbar Brand-->
-            <a class="navbar-brand">Navbar</a>
+            <a class="navbar-brand">DC.Farmacia</a>
             <!--Links-->
             <ul class="nav navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link">Homess <span class="sr-only">(current)</span></a>
+                    <a class="nav-link">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Features</a>
+                    <a class="nav-link">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Pricing</a>
+                    <a class="nav-link">Promociones</a>
                 </li>
                 <li class="nav-item btn-group">
-                    <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Consultas</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
                         <a class="dropdown-item">Doctora</a>
                         <a class="dropdown-item">Dentista</a>
