--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--Collapse content-->
         <div class="collapse navbar-toggleable-xs" id="collapseEx2">
             <!--Navbar Brand-->
-            <a class="navbar-brand">DC.Farmacia</a>
+            <a class="navbar-brand">DC.Farmacia`s</a>
             <!--Links-->
             <ul class="nav navbar-nav">
                 <li class="nav-item active">
