informacio del servicio ofrecido

--- a/index.html
+++ b/index.html
@@ -79,26 +79,26 @@
 	<h3 class="text-xs-center">----------------------Mas Servicios------------------------</h3>
 <div class="card-group">
     <div class="card">
-        <img class="img-fluid" src="http://mdbootstrap.com/images/reg/reg%20(63).jpg" alt="Card image cap">
+        <img class="img-fluid" src="./img/locales.jpg">
         <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h4 class="card-title">locales</h4>
+            <p class="card-text">Nuestros locales  se encuentran por el PLAZA DE ARMAS DEL CUSCO , tambien en al frente del MERCADO WANCHAC.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
     <div class="card">
-        <img class="img-fluid" src="http://mdbootstrap.com/images/reg/reg%20(62).jpg" alt="Card image cap">
+        <img class="img-fluid" src="./img/delivery.jpg">
         <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h4 class="card-title">Deliveri</h4>
+            <p class="card-text">Estimado cliente le ofrecemos el servicio de envio hasta su domicilio</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
     <div class="card">
-        <img class="img-fluid" src="http://mdbootstrap.com/images/reg/reg%20(64).jpg" alt="Card image cap">
+        <img class="img-fluid" src="./img/coorporativo.jpg">
         <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h4 class="card-title">Servicios Corporativos</h4>
+            <p class="card-text">Ofrecemos atencion en distintos areas</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
