cambio de texto

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <img class="img-fluid" src="./img/locales.jpg">
         <div class="card-block">
             <h4 class="card-title">locales</h4>
-            <p class="card-text">Nuestros locales  se encuentran por el PLAZA DE ARMAS DEL CUSCO , tambien en al frente del MERCADO WANCHAC.</p>
+            <p class="card-text">"SU SALUD ES IMPORTANTE PARA NOSOTRO"</p>
+            <p class="card-text">ubicanos en distintos establecimientos q hay en la ciudad de cusco</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
@@ -98,7 +99,7 @@
         <img class="img-fluid" src="./img/coorporativo.jpg">
         <div class="card-block">
             <h4 class="card-title">Servicios Corporativos</h4>
-            <p class="card-text">Ofrecemos atencion en distintos areas</p>
+            <p class="card-text">Ventas especiales a empresas</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
